# tiny_recorder

./: new.eez-project-ui-state
i2s_test_same_gpio/: CMakeLists.txt
i2s_test_same_gpio/main/: CMakeLists.txt  audio.c  audio.h  main.c  recorder.c  recorder.h  sdcard.c  sdcard.h  speaker.c
lvgl_esp32/: CMakeLists.txt  app.py  filedemo.c  guide.md  optimized.c  test.c
lvgl_esp32/main/: CMakeLists.txt  encoder_input.c  encoder_input.h  idf_component.yml  main.c  pin_cfg.h  pin_cng.h
lvgl_esp32/main/lcd/: ctp_cst816d.c  ctp_cst816d.h  lcd.c  lcd.h
lvgl_esp32/main/led/: led_control.c  led_control.h
lvgl_esp32/main/recorder/: recorder.c  recorder.h  recorder_control.c  recorder_control.h
lvgl_esp32/main/rfid/: rc522_reader.c  rc522_reader.h
lvgl_esp32/main/sdcard/: sdcard.c  sdcard.h
lvgl_esp32/main/speaker/: speaker.c  speaker.h
lvgl_esp32/main/ui/: actions.c  actions.cpp  actions.h  eez-flow.cpp  fonts.h  screens.c  screens.h  ui.c  ui.h  ui_font_chinese_14.c  ui_font_chinese_20.c  ui_font_chinese_font_14.c  ui_font_chinese_font_20.c  ui_font_chinese_font_30.c  vars.c  vars.cpp  vars.h
lvgl_esp32/main/ui/idf_flow/: idf_flow.eez-project
lvgl_esp32/main/ui/idf_flow/src/ui/: action.c  actions.h  screens.c  screens.h  ui.c  ui.h  vars.cpp  vars.h
sdmmc_demo/: CMakeLists.txt
sdmmc_demo/main/: main.c  pin.cfg.h
