idf_component_register(SRCS "main.c" 
                            "encoder_input.c"
                            "ui/eez-flow.cpp"
                            "ui/screens.c"
                            "ui/styles.c"
                            "ui/images.c"
                            "ui/ui.c"
                            "led/led_control.c"
                            "ui/ui_font_chinese_font_30.c"
                            "ui/ui_font_chinese_font_14.c"
                             "ui/ui_font_chinese_font_20.c"
                             "rfid/rc522_reader.c"
                             "ui/vars.c"
                            
                    INCLUDE_DIRS "."
                                 "ui"
                                 "led"
                                 "rfid")